# cmake

FindCURL/: CMakeLists.txt
FindCURL/src/: CMakeLists.txt  main.cpp
FindHello/: CMakeLists.txt
FindHello/cmake/: FindHELLO.cmake
FindHello/src/: CMakeLists.txt  main.cpp
UseLib/: CMakeLists.txt
UseLib/src/: CMakeLists.txt  main.cpp
hello/: CMakeLists.txt
hello/lib/: CMakeLists.txt  hello.cpp
hello/src/: main.cpp
