SET(LIBHELLO_SRC hello.cpp)

# 添加动态库
ADD_LIBRARY(hello SHARED ${LIBHELLO_SRC})
# 添加静态库
ADD_LIBRARY(hello_static STATIC ${LIBHELLO_SRC})
# 静态库改名
SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")

# 设置版本 VERSION 指代动态库版本，SOVERSION 指代 API 版本。
SET_TARGET_PROPERTIES(hello PROPERTIES VERSION 1.2 SOVERSION 1)

# 静态库要使用 ARCHIVE 关键字
INSTALL(TARGETS hello hello_static LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
INSTALL(FILES hello.h DESTINATION include/hello)